# grammarTrainer

./: .env  Cargo.toml  dictConj.txt
migrations/2018-03-18-123316_create_verbs/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/verbs/: mod.rs  verbs.rs
static/: admin.html  index.html  package.json
static/src/components/: App.vue  Autocomplete.vue
static/src/js/: main.js
