[package]
name = "grammatrainer"
version = "0.1.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen  = "0.3.0"
serde           = "1.0"
serde_json      = "1.0"
serde_derive    = "1.0"
diesel = { version = "1.1.1", features = ["sqlite"] }
dotenv = "0.10.0"
nom = "4.1.1"
phonetic = { git = "https://github.com/mothsART/phonetic.git", branch = "master" }

[dependencies.rocket_contrib]
version = "0.3.0"
default-features = false
features = ["json"]
